--- a/src/components/MovieList.astro
+++ b/src/components/MovieList.astro
@@ -10,7 +10,8 @@ const { movieList } = Astro.props
 
 <ul
   role='list'
-  class='grid grid-cols-4 gap-4'
+  class='grid grid-cols-[repeat(auto-fill,minmax(200px,1fr))] gap-4 p-4'
+  '
 >
   {movieList?.map((movie) => <MovieCard movie={movie} />)}
 </ul>
