--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,12 @@
 ---
-import SearchInput from "./SearchInput";
+import SearchInput from './SearchInput'
 ---
 
-<div class="flex justify-between p-4 bg-neutral-800">
-  <div class="logo">The TRAILERS</div>
-  <div class="search">
-    <SearchInput client:load />
-  </div>
-</div>
+<header class='md:pb-8 pb-4'>
+  <nav class='flex justify-between p-4 bg-neutral-800 items-center'>
+    <div class='logo text-white font-black text-2xl'>The TRAILERS</div>
+    <div class='search'>
+      <SearchInput client:load />
+    </div>
+  </nav>
+</header>
