indicual card details

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,11 @@ import SearchInput from './SearchInput'
 
 <header class='md:pb-8 pb-4'>
   <nav class='flex justify-between p-4 bg-neutral-800 items-center'>
-    <div class='logo text-white font-black text-2xl'>The TRAILERS</div>
+    <a
+      class='logo text-white font-black text-2xl'
+      href='/'
+      >The TRAILERS</a
+    >
     <div class='search'>
       <SearchInput client:load />
     </div>
