--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,15 +1,11 @@
 ---
-import SearchInput from './SearchInput'
+import SearchInput from "./SearchInput";
 ---
 
-<header class='md:pb-8 pb-4'>
-  <nav class='flex justify-between p-4 bg-neutral-800 items-center'>
-    <a
-      class='logo text-white font-black text-2xl'
-      href='/'
-      >The TRAILERS</a
-    >
-    <div class='search'>
+<header class="fixed w-full">
+  <nav class="flex justify-between p-4 items-center">
+    <a class="logo text-white font-black text-2xl" href="/">The TRAILERS</a>
+    <div class="search">
       <SearchInput client:load />
     </div>
   </nav>
