--- a/src/pages/details/[id].astro
+++ b/src/pages/details/[id].astro
@@ -59,7 +59,7 @@ console.log(movie);
       <span class="text-neutral-300/50 text-lg tracking-widest">HYPE</span>
       <section class="votes text-neutral-300 flex gap-4">
         <div
-          class={`average flex flex-col flex-1 border-2 rounded-lg p-4 items-center justify-center text-2xl font-black ring-4	 ${voteColor(
+          class={`average flex flex-col flex-1 border-2 rounded-lg p-4 items-center justify-center text-2xl font-black ${voteColor(
             movie.vote_average
           )}`}
         >
