--- a/src/pages/details/[id].astro
+++ b/src/pages/details/[id].astro
@@ -1,13 +1,15 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import { getMovieByID } from "../../api/api";
+import RotatedDetailCard from "../../components/RotatedDetailCard.astro";
+import PlayIcon from "../../icons/PlayIcon.astro";
 
 const { id } = Astro.params;
 const movie = await getMovieByID(id!);
 
 const movieURL = `https://image.tmdb.org/t/p/original${movie?.backdrop_path}`;
 
-function voteColor(note: number) {
+function voteColor(note: number): string {
   const realNote = Math.floor(note);
   if (realNote === 1) return "bg-red-900";
   if (realNote === 2) return "bg-red-800";
@@ -19,6 +21,7 @@ function voteColor(note: number) {
   if (realNote === 8) return "bg-green-500";
   if (realNote === 9) return "bg-green-500";
   if (realNote === 10) return "bg-green-500";
+  return "";
 }
 
 console.log(movie);
@@ -26,53 +29,77 @@ console.log(movie);
 
 <Layout title={movie.original_title}>
   <div
-    class={`min-h-[32rem] w-full flex gap-4 items-bottom justify-end flex-col px-8 pb-12`}
+    class={`min-h-[32rem] w-full flex gap-4 items-bottom justify-end flex-col px-8 pb-16`}
     style={{
       background: `linear-gradient(hsla(0, 0%, 4%, .1), hsla(0, 0%, 4%, 1)), url(${movieURL})`,
       backgroundPosition: "top center",
       backgroundSize: "cover",
     }}
   >
-    <h1 class="text-white text-4xl font-bold flex flex-col">
-      {movie.title}<br /><span class="text-xl text-neutral-300/50 font-normal"
-        >({movie.original_title})</span
-      >
-    </h1>
-    <div class="genres flex gap-2">
-      {
-        movie.genres.map((genre) => (
-          <div class="border flex rounded bg-neutral-300/10 py-1 px-2 text-xs backdrop-blur-sm text-neutral-300">
-            {genre.name}
-          </div>
-        ))
-      }
-    </div>
-  </div>
-  <article class="p-8 flex gap-8">
-    <div class="overview w-8/12 flex flex-col gap-3">
-      <span class="text-neutral-300/50 text-lg tracking-widest"
-        >DESCRIPTION</span
-      >
-      <p class="text-neutral-300">{movie.overview}</p>
-    </div>
-    <div class="rates w-4/12 flex flex-col gap-3">
-      <span class="text-neutral-300/50 text-lg tracking-widest">HYPE</span>
-      <section class="votes text-neutral-300 flex gap-4">
-        <div
-          class={`average flex flex-col flex-1 border-2 rounded-lg p-4 items-center justify-center text-2xl font-black ${voteColor(
-            movie.vote_average
-          )}`}
+    <div class="container mx-auto flex flex-col gap-4 max-w-screen-lg">
+      <h1 class="text-white text-4xl font-bold flex flex-col">
+        {movie.title}<br /><span class="text-xl text-neutral-300/50 font-normal"
+          >({movie.original_title})</span
         >
-          <span class="font-normal text-base tracking-wider">NOTE</span>
-          {movie.vote_average}
-        </div>
+      </h1>
+      <div class="genres flex gap-2">
+        {
+          movie.genres.map((genre) => (
+            <div class="border flex rounded bg-neutral-300/10 py-1 px-2 text-xs backdrop-blur-sm text-neutral-300">
+              {genre.name}
+            </div>
+          ))
+        }
+      </div>
+      <section class="grid grid-cols-4 gap-4">
         <div
-          class="count flex flex-1 flex-col border rounded-lg p-4 items-center justify-center text-2xl font-black"
+          class="flex text-neutral-300 gap-4 border-2 p-4 min-h-[120px] items-center justify-center content-center rounded-2xl bg-red-600/60 backdrop-blur-lg"
         >
-          <span class="font-normal text-base tracking-wider">VOTES COUNT</span>
-          {movie.vote_count}
+          <PlayIcon className="w-16 fill-white stroke-none" />
         </div>
+        <RotatedDetailCard category="RELEASE" text={movie.release_date} />
+        <RotatedDetailCard
+          category="BUDGET"
+          text={movie.budget.toLocaleString("es-ES", {
+            style: "currency",
+            currency: "EUR",
+            minimumFractionDigits: 0,
+            maximumFractionDigits: 0,
+          })}
+        />
+        <RotatedDetailCard category="DURATION" text={movie.runtime} />
       </section>
     </div>
-  </article>
+  </div>
+
+  <div class="container mx-auto max-w-screen-lg">
+    <article class="flex gap-8">
+      <div class="overview w-8/12 flex flex-col gap-3">
+        <span class="text-neutral-300/50 text-lg tracking-widest"
+          >DESCRIPTION</span
+        >
+        <p class="text-neutral-300">{movie.overview}</p>
+      </div>
+      <div class="rates w-4/12 flex flex-col gap-3">
+        <span class="text-neutral-300/50 text-lg tracking-widest">HYPE</span>
+        <section class="votes text-neutral-300 flex gap-4">
+          <div
+            class={`average flex flex-col flex-1 border-2 rounded-lg p-4 items-center justify-center text-2xl font-black ${voteColor(
+              movie.vote_average
+            )}`}
+          >
+            <span class="font-normal text-base tracking-wider">NOTE</span>
+            {movie.vote_average}
+          </div>
+          <div
+            class="count flex flex-1 flex-col border rounded-lg p-4 items-center justify-center text-2xl font-black"
+          >
+            <span class="font-normal text-base tracking-wider">VOTES COUNT</span
+            >
+            {movie.vote_count}
+          </div>
+        </section>
+      </div>
+    </article>
+  </div>
 </Layout>
