--- a/src/pages/details/[id].astro
+++ b/src/pages/details/[id].astro
@@ -84,7 +84,7 @@ console.log(movie);
         <span class="text-neutral-300/50 text-lg tracking-widest">HYPE</span>
         <section class="votes text-neutral-300 flex gap-4">
           <div
-            class={`average flex flex-col flex-1 border-2 rounded-lg p-4 items-center justify-center text-2xl font-black ${voteColor(
+            class={`average flex flex-col flex-1  rounded-lg p-4 items-center justify-center text-2xl font-black ${voteColor(
               movie.vote_average
             )}`}
           >
@@ -92,7 +92,7 @@ console.log(movie);
             {movie.vote_average}
           </div>
           <div
-            class="count flex flex-1 flex-col border rounded-lg p-4 items-center justify-center text-2xl font-black"
+            class="count flex flex-1 flex-col rounded-lg bg-neutral-300/30 backdrop-blur-smrounded-lg p-4 items-center justify-center text-2xl font-black"
           >
             <span class="font-normal text-base tracking-wider">VOTES COUNT</span
             >
