--- a/src/pages/details/[id].astro
+++ b/src/pages/details/[id].astro
@@ -74,7 +74,7 @@ console.log(movie);
 
   <div class="container mx-auto max-w-screen-lg">
     <article class="flex gap-8">
-      <div class="overview w-8/12 flex flex-col gap-3">
+      <div class="overview w-8/12 flex md:flex-col gap-3">
         <span class="text-neutral-300/50 text-lg tracking-widest"
           >DESCRIPTION</span
         >
