--- a/src/pages/details/[id].astro
+++ b/src/pages/details/[id].astro
@@ -38,9 +38,17 @@ console.log(movie);
   >
     <div class="container mx-auto flex flex-col gap-4 max-w-screen-lg">
       <h1 class="text-white text-4xl font-bold flex flex-col">
-        {movie.title}<br /><span class="text-xl text-neutral-300/50 font-normal"
-          >({movie.original_title})</span
-        >
+        {movie.title}
+        {
+          movie.title !== movie.original_title && (
+            <>
+              <br />
+              <span class="text-xl text-neutral-300/50 font-normal">
+                ({movie.original_title})
+              </span>
+            </>
+          )
+        }
       </h1>
       <div class="genres flex gap-2">
         {
