--- a/src/components/RotatedDetailCard.astro
+++ b/src/components/RotatedDetailCard.astro
@@ -3,8 +3,15 @@ const { category, text } = Astro.props;
 ---
 
 <div
-  class="flex text-neutral-300 gap-4 p-4 min-h-[120px] items-center justify-center content-center rounded-2xl bg-neutral-300/20 backdrop-blur-sm"
+  class="flex text-neutral-300 gap-0 p-4 min-h-[120px] items-center justify-center content-center rounded-2xl bg-neutral-300/20 backdrop-blur-sm"
 >
-  <span class="-rotate-90 text-xs w-8 flex">{category}</span>
-  <h4 class="flex-1 text-2xl font-black">{text}</h4>
+  <span
+    class="-rotate-90 text-xs w-8 flex items-center justify-center opacity-50 tracking-widest"
+    >{category}</span
+  >
+  <h4
+    class="flex-1 text-2xl font-black justify-center items-center text-center"
+  >
+    {text}
+  </h4>
 </div>
