fix mobile details styles

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import SearchInput from "./SearchInput";
 
 <header class="fixed w-full">
   <div class="container max-w-screen-lg mx-auto">
-    <nav class="flex justify-between py-4 items-center">
+    <nav class="flex justify-between p-4 items-center">
       <a class="logo text-white font-black text-2xl" href="/">The TRAILERS</a>
       <div class="search">
         <SearchInput client:load />
