--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,39 +1,33 @@
 ---
-import Header from '../components/Header.astro'
+import "@fontsource-variable/oswald";
+import Header from "../components/Header.astro";
 
 interface Props {
-  title: string
+  title: string;
 }
 
-const { title } = Astro.props
+const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang='en'>
+<html lang="en">
   <head>
-    <meta charset='UTF-8' />
-    <meta
-      name='description'
-      content='Astro description'
-    />
-    <meta
-      name='viewport'
-      content='width=device-width'
-    />
-    <link
-      rel='icon'
-      type='image/svg+xml'
-      href='/favicon.svg'
-    />
-    <meta
-      name='generator'
-      content={Astro.generator}
-    />
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class='bg-neutral-950'>
+  <body class="bg-neutral-950">
     <Header />
 
     <slot />
   </body>
 </html>
+
+<style is:global>
+  .oswald {
+    font-family: "Oswald Variable", sans-serif;
+  }
+</style>
