--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,20 @@
 ---
 import SearchInput from "./SearchInput";
+interface Props {
+  fixed: boolean;
+}
+const { fixed } = Astro.props;
 ---
 
-<header class="fixed w-full">
-  <div class="container max-w-screen-lg mx-auto">
-    <nav class="flex justify-between p-4 items-center">
-      <a class="logo text-white font-black text-2xl" href="/">The TRAILERS</a>
-      <div class="search">
-        <SearchInput client:load />
-      </div>
-    </nav>
-  </div>
+<header
+  class={`${fixed && "fixed"} w-full container max-w-screen-lg mx-auto p-4`}
+>
+  <nav class="flex justify-between items-center gap-4">
+    <a class="logo text-white font-black text-2xl flex-1 w-1/2" href="/"
+      >The TRAILERS</a
+    >
+    <div class="search flex-1 w-1/2">
+      <SearchInput client:load />
+    </div>
+  </nav>
 </header>
