--- a/src/layouts/LayoutDetail.astro
+++ b/src/layouts/LayoutDetail.astro
@@ -3,7 +3,7 @@ import "@fontsource-variable/oswald";
 import Header from "../components/Header.astro";
 
 interface Props {
-  title: string;
+  title?: string;
 }
 
 const { title } = Astro.props;
@@ -20,7 +20,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body class="bg-neutral-950">
-    <Header fixed={false} />
+    <Header fixed={true} />
 
     <slot />
   </body>
