--- a/src/pages/details/[id].astro
+++ b/src/pages/details/[id].astro
@@ -59,7 +59,7 @@ console.log(movie);
           ))
         }
       </div>
-      <section class="grid grid-cols-4 md:grid-cols-4 gap-4">
+      <section class="grid grid-cols-4 md:grid-cols-4 md:gap-4 gap-2">
         <div
           class="flex text-neutral-300 gap-0 p-4 md:min-h-[120px] items-center justify-center content-center rounded-2xl bg-red-600/60 backdrop-blur-sm flex-col md:flex-row"
         >
