--- a/src/pages/details/[id].astro
+++ b/src/pages/details/[id].astro
@@ -29,7 +29,7 @@ console.log(movie);
 
 <LayoutDetail title={movie.original_title}>
   <div
-    class={`min-h-[32rem] w-full flex gap-4 items-bottom justify-end flex-col px-4 md:pb-16 pb-4`}
+    class={`md:min-h-[32rem] min-h-[24rem] w-full flex gap-4 items-bottom justify-end flex-col px-4 pb-0`}
     style={{
       background: `linear-gradient(hsla(0, 0%, 4%, .1), hsla(0, 0%, 4%, 1)), url(${movieURL})`,
       backgroundPosition: "top center",
@@ -52,11 +52,13 @@ console.log(movie);
       </h1>
       <div class="genres flex gap-2">
         {
-          movie.genres.map((genre) => (
-            <div class="border flex rounded bg-neutral-300/10 py-1 px-2 text-xs backdrop-blur-sm text-neutral-300">
-              {genre.name}
-            </div>
-          ))
+          movie.genres
+            ?.slice(1, 6)
+            ?.map((genre) => (
+              <div class="border flex rounded bg-neutral-300/10 py-1 px-2 text-xs backdrop-blur-sm text-neutral-300">
+                {genre.name}
+              </div>
+            ))
         }
       </div>
       <section class="grid grid-cols-4 md:grid-cols-4 md:gap-4 gap-2">
