--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,19 +1,21 @@
 ---
-import SearchInput from "./SearchInput";
+import SearchInput from './SearchInput'
 interface Props {
-  fixed: boolean;
+  fixed: boolean
 }
-const { fixed } = Astro.props;
+const { fixed } = Astro.props
 ---
 
-<header
-  class={`${fixed && "fixed"} w-full container max-w-screen-lg mx-auto p-4`}
->
-  <nav class="flex justify-between items-center gap-4">
-    <a class="logo text-white font-black text-2xl flex-1 w-1/2" href="/"
+<header class={`${fixed && 'fixed z-10 top-0 left-0 right-'} w-full p-4 `}>
+  <nav
+    class='flex justify-between items-center gap-4 container max-w-screen-lg mx-auto py-6'
+  >
+    <a
+      class='logo text-white font-black text-2xl flex-1 w-1/2'
+      href='/'
       >The TRAILERS</a
     >
-    <div class="search flex-1 w-1/2">
+    <div class='search flex-1 w-1/2 max-w-[200px]'>
       <SearchInput client:load />
     </div>
   </nav>
