--- a/src/components/MovieList.astro
+++ b/src/components/MovieList.astro
@@ -1,16 +1,16 @@
 ---
-import type { Movie } from "../types/types";
-import MovieCard from "./MovieCard";
+import type { Movie } from '../types/types'
+import MovieCard from './MovieCard'
 
 interface Props {
-  movieList: Movie[];
+  movieList: Movie[]
 }
-const { movieList } = Astro.props;
+const { movieList } = Astro.props
 ---
 
 <ul
-  role="list"
-  class="grid grid-cols-2 md:grid-cols-[repeat(auto-fill,minmax(200px,1fr))] gap-4 p-4"
+  role='list'
+  class='grid grid-cols-2 md:grid-cols-[repeat(auto-fill,minmax(200px,1fr))] gap-4'
   '
 >
   {movieList?.map((movie) => <MovieCard movie={movie} />)}
