--- a/src/components/MovieGridInfo.astro
+++ b/src/components/MovieGridInfo.astro
@@ -13,6 +13,8 @@ const options: Intl.NumberFormatOptions = {
   minimumFractionDigits: 0,
   maximumFractionDigits: 0,
 }
+const formatedBudgetText = `$${Number(formatedBudget).toLocaleString('es-ES', options)}`
+console.log(formatedBudgetText)
 ---
 
 <section class='grid grid-cols-4 md:grid-cols-4 md:gap-4 gap-2'>
@@ -30,7 +32,7 @@ const options: Intl.NumberFormatOptions = {
   />
   <RotatedDetailCard
     category='BUDGET'
-    text={`$${Number(formatedBudget).toLocaleString('es-ES', options)}`}
+    text={formatedBudget}
   />
   <RotatedDetailCard
     category='DURATION'
